Fix making viewer control elements too tall
Small difference between looking awkward or not

--- a/core/static/css/viewer.css
+++ b/core/static/css/viewer.css
@@ -75,7 +75,7 @@
 #imageViewer_nav .control {
     border-right: solid 1px #aaa;
     display: inline-block;
-    height: 2.75em;
+    height: 2.5em;
     padding: 7px 12px;
     vertical-align: text-top;
 }
